--- a/part3/backendExample/package.json
+++ b/part3/backendExample/package.json
@@ -10,16 +10,22 @@
     "logs:prod": "fly logs",
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint .",
+    "lint:fix": "eslint --fix ."
   },
   "author": "Jonathan H",
   "license": "MIT",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "mongoose": "^6.12.2",
+    "monodb": "^1.5.1"
   },
   "devDependencies": {
     "@flydotio/dockerfile": "^0.4.10",
+    "eslint": "^8.53.0",
     "nodemon": "^3.0.1"
   }
 }
